--- a/mixModelTest.ipynb
+++ b/mixModelTest.ipynb
@@ -31,7 +31,7 @@
         "id": "jtlrT6EwZgOl"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mettinger/mixModel/blob/main/mixModelTest.ipynb)"
+        "Right click to open in Colab: [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mettinger/mixModel/blob/main/mixModelTest.ipynb)"
       ]
     },
     {
@@ -68,6 +68,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xggz7yO8C4s7"
+      },
+      "source": [
+        "$\\alpha = \\beta$"
       ]
     },
     {
