--- a/mixModelTest.ipynb
+++ b/mixModelTest.ipynb
@@ -28,10 +28,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "k1cSd5l2EN-U"
+      },
+      "source": [
+        "Right click to open this notebook in Colab:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "jtlrT6EwZgOl"
       },
       "source": [
-        "Right click to open in Colab: [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mettinger/mixModel/blob/main/mixModelTest.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mettinger/mixModel/blob/main/mixModelTest.ipynb)"
       ]
     },
     {
@@ -68,15 +77,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Xggz7yO8C4s7"
-      },
-      "source": [
-        "$\\alpha = \\beta$"
       ]
     },
     {
