--- a/mixModelTest.ipynb
+++ b/mixModelTest.ipynb
@@ -31,7 +31,7 @@
         "id": "k1cSd5l2EN-U"
       },
       "source": [
-        "Right click to open this notebook in Colab:"
+        "#Right click to open this notebook in Colab:"
       ]
     },
     {
@@ -41,6 +41,37 @@
       },
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mettinger/mixModel/blob/main/mixModelTest.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Svi3GHbodBzD"
+      },
+      "source": [
+        "# The statistical model (instantiated parameters are listed in cell below):"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BKEAM0x0d1tu"
+      },
+      "source": [
+        "$mode_i \\sim$ Normal(modeMean, modeCovariance) for $i = 1,...,$nModesPerPerson    \n",
+        "\n",
+        "$location_{ij} \\sim$ Normal($mode_i$, personCovariance) for $i = 1,...,$nModesPerPerson and $j = 1,...,$nPerson \n",
+        "\n",
+        "$data_{ijk} = $ Normal($location_{ij}$, dataCovariance) for $i = 1,..$nModesPerPerson and $j = 1,...,$nPerson and $k = 1,...,$nSamplesPerLocation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qb5Tj_k0dKoh"
+      },
+      "source": [
+        "# Install Pyro and do imports."
       ]
     },
     {
@@ -107,6 +138,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4gVQfUs5dOyS"
+      },
+      "source": [
+        "# Instantiate parameters"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RwYOaxp3aUi0"
@@ -128,6 +168,15 @@
       ],
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ejldhWEEdWxe"
+      },
+      "source": [
+        "# Function for generating data"
+      ]
     },
     {
       "cell_type": "code",
@@ -168,7 +217,7 @@
         "id": "m6YLBr7gaUi1"
       },
       "source": [
-        "# Generate fake data"
+        "# Generate simulated data"
       ]
     },
     {
@@ -187,10 +236,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jjQ25UHVaUi1"
+        "id": "o-gra0u8diGq"
       },
       "source": [
-        "# Plot fake data"
+        "# Print the paramters and plot the simulated data"
       ]
     },
     {
@@ -473,40 +522,6 @@
           },
           "execution_count": 11
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 147
-        },
-        "id": "gIsZVIotrhMM",
-        "outputId": "bfcbfbfc-5396-4b88-a122-1ebd748d033a"
-      },
-      "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-5ca232fb86a4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yNNajk4HXkco"
-      },
-      "source": [
-        ""
       ]
     }
   ]
